--- a/CSS/style.css
+++ b/CSS/style.css
@@ -83,7 +83,7 @@ main {
 .reklam {
     border-radius: 10px;
     width: 20%;
-    background-image: url('../Bilder/Reklam/kids_smoke.png');
+    background-image: url('../Bilder/Reklam/green.png');
     background-color: yellow;
     height: 100%;
     background-size: cover;
