--- a/CSS/style.css
+++ b/CSS/style.css
@@ -83,10 +83,10 @@ main {
 .reklam {
     border-radius: 10px;
     width: 20%;
-    background-image: url('../Bilder/Reklam/green.png');
-    background-color: yellow;
+    background-image: url("../Bilder/Reklam/strömmen.png");
+    background-size:cover;
+    background-size:100% 100%;
     height: 100%;
-    background-size: cover;
     display: flex;
 }
 
