--- a/CSS/style.css
+++ b/CSS/style.css
@@ -83,7 +83,7 @@ main {
 .reklam {
     border-radius: 10px;
     width: 20%;
-    background-image: url("../Bilder/Reklam/strömmen.png");
+    background-image: url("/Bilder/strömmen.png");
     background-size:cover;
     background-size:100% 100%;
     height: 100%;
