--- a/CSS/style.css
+++ b/CSS/style.css
@@ -88,6 +88,12 @@ main {
     background-size:100% 100%;
     height: 100%;
     display: flex;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.reklam:hover {
+    transform: scale(1.05); 
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
 }
 
 .celebirty {
@@ -146,6 +152,12 @@ main {
     display: flex; 
     text-align: center;
     box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
+    transition: background-color 0.3s ease;
+}
+
+#celebirty_button:hover{
+    transform: scale(1.2);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
 }
 
 #celebirty_window {
@@ -333,6 +345,12 @@ section {
     border-radius: 10px;
     color: white;
     text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.surströmming-produkt > div:hover{
+    transform:scale(1.1);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
 }
 
 .produkt_window{
