--- a/CSS/style.css
+++ b/CSS/style.css
@@ -354,7 +354,7 @@ section {
     border-radius: 10px;
 }
 
-#värnen {
+#vänern {
     background-image: url("../Bilder/Produkt_bilder/värnen.png");
 }
 
