--- a/CSS/style.css
+++ b/CSS/style.css
@@ -205,7 +205,7 @@ main {
     position:absolute;
     top:0px;
     width: 100%;
-    height: 20;
+    height: 20px;
     cursor: pointer;
     right:0px;
     justify-content:center;
@@ -222,7 +222,7 @@ main {
     position:absolute;
     top:0px;
     width: 100%;
-    height: 20;
+    height: 20px;
     cursor: pointer;
     right:0px;
     justify-content:center;
@@ -239,7 +239,7 @@ main {
     position:absolute;
     top:0px;
     width: 100%;
-    height: 20;
+    height: 20px;
     cursor: pointer;
     right:0px;
     justify-content:center;
@@ -256,7 +256,7 @@ main {
     position:relative;
     top:0px;
     width: 100%;
-    height: 20;
+    height: 20px;
     cursor: pointer;
     right:0px;
     justify-content:center;
@@ -477,7 +477,6 @@ footer {
     footer > p{
         padding:0px;
         margin:0px;
-        flex:flex-wrap;
         font-size:15px;
         justify-content:center;
     }
